# Gideon_Agent

./: .gitignore  Gideon.py  Gideon_Test.ipynb  Mcp_local.ipynb  agent_test.ipynb  main.py  pyproject.toml
